[package]
name = "formal-architecture-tools"
version = "0.1.0"
edition = "2021"
authors = ["Formal Architecture Team"]
description = "Formal architecture verification and analysis tools"
license = "MIT"
repository = "https://github.com/formal-architecture/tools"

[dependencies]
# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# 数学和逻辑
petgraph = "0.6"
nalgebra = "0.32"
num-traits = "0.2"
num-bigint = "0.4"

# 形式化验证
z3 = "0.1"
petri-net = "0.1"
ltl = "0.1"

# 类型系统
typetag = "0.2"
type-map = "0.1"

# 并发和异步
rayon = "1.7"
crossbeam = "0.8"
async-trait = "0.1"

# 日志和错误处理
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.10"

# 测试
proptest = "1.3"
criterion = "0.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "verification_benchmarks"
harness = false

[features]
default = ["full"]
full = ["z3", "petri-net", "ltl"]
minimal = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 